--- a/views/session/index.ejs
+++ b/views/session/index.ejs
@@ -6,7 +6,7 @@
 		<div class="col-md-4 text-center">
 			<h2>用户登录</h2><hr>
 			<form action="/session/create" method="POST">
-				<input type="text" name="username" placeholder="用户名" class="form-control" /><br>
+				<input type="text" name="username" placeholder="用户名" value="<%= username %>" class="form-control" /><br>
 				<input type="password" name="password" placeholder="密码" class="form-control" /><br>
 				<input type="submit" class="btn btn-default" value="登录" />
 				<input type="hidden" name="_csrf" value="<%= _csrf %>" />
