--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -1,1 +1,26 @@
-user#index.html
+<table>
+  <tr>
+    <th>
+      帐号
+    </th>
+    <th>
+      超级用户
+    </th>
+    <th>
+
+    </th>
+  </tr>
+  <% users.forEach(function(user){ %>
+    <tr>
+      <td>
+        <%= user.Name %>
+      </td>
+      <td>
+        <%= user.superUser %>
+      </td>
+      <td>
+        <a href="/user/delete/<%=user.Name%>" onclick="if(!confirm('删除后不可恢复,确定删除纪录吗?'))return false;">删除</a>
+      </td>
+    </tr>
+  <% }) %>
+</table>
