finish add user logic add user logout logic

--- a/views/user/create.ejs
+++ b/views/user/create.ejs
@@ -4,9 +4,8 @@
 <br>
 <input name="pwd" type="password" value="<%= user.pwd %>"/>
 <br>
-<input type="check" value="<%= user.isSuper %>"/>
 <br>
-<input type="submit" name="name" value="提交">
+<input type="submit"  value="提交">
 <input type="hidden" name="_csrf" value="<%= _csrf %>" />
 </form>
 <br>
