--- a/views/role/edit.ejs
+++ b/views/role/edit.ejs
@@ -1,4 +1,5 @@
 <form action="/role/edit" method="post">
+  <input type="hidden" name="id" value="<%=  role.id%>">
   <% include _form.ejs %>
 
 </form>
