add navigation controller

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -3,4 +3,5 @@ homepage
 <a href="/user" >用户</a>
 <a href="/role" >角色</a>
 <a href="/func" >功能</a>
+<a href="/navigation" >导航</a>
 <a href="/logout" >注销</a>
