--- a/views/session/index.ejs
+++ b/views/session/index.ejs
@@ -2,16 +2,25 @@
 
 <div class="container">
 	<div class="row">
-		<div class="col-md-4"></div>
-		<div class="col-md-4 text-center">
-			<h2>用户登录</h2><hr>
-			<form action="/session/create" method="POST">
-				<input type="text" name="username" placeholder="用户名" value="<%= username %>" class="form-control" /><br>
-				<input type="password" name="password" placeholder="密码" class="form-control" /><br>
-				<input type="submit" class="btn btn-default" value="登录" />
-				<input type="hidden" name="_csrf" value="<%= _csrf %>" />
-			</form>
-		</div>
-		<div class="col-md-4"></div>
+		<div class="col-lg-12">
+			<% if(req.flash('message').type ){ %>
+       <div class="alert alert-denger">
+           <a class="close" data-dismiss="alert" href="#">&times;</a>
+					 <%= req.flash('message').msg %>
+       </div>
+			 <% } %>
+       <form method="POST" action="/session/create" class="bootstrap-admin-login-form">
+           <h1>登 录</h1>
+           <div class="form-group">
+               <input class="form-control" type="text" name="username" placeholder="用户名">
+           </div>
+           <div class="form-group">
+               <input class="form-control" type="password" name="password" placeholder="密码">
+           </div>
+
+           <button class="btn btn-lg btn-primary center" type="submit">登 录</button>
+	 				<input type="hidden" name="_csrf" value="<%= _csrf %>" />
+       </form>
+   </div>
 	</div>
 </div>
