--- a/views/session/index.ejs
+++ b/views/session/index.ejs
@@ -3,16 +3,18 @@
 <div class="container">
 	<div class="row">
 		<div class="col-lg-12">
-			<% if(req.flash('message').type ){ %>
-       <div class="alert alert-denger">
+			<%
+				var error=req.flash('error');
+			 if(error.length>>0>0){ %>
+       <div class="alert alert-danger" style="width:400px;">
            <a class="close" data-dismiss="alert" href="#">&times;</a>
-					 <%= req.flash('message').msg %>
+					 <%= error %>
        </div>
 			 <% } %>
        <form method="POST" action="/session/create" class="bootstrap-admin-login-form">
            <h1>登 录</h1>
            <div class="form-group">
-               <input class="form-control" type="text" name="username" placeholder="用户名">
+               <input class="form-control" type="text" name="username" placeholder="用户名" value="<%= username%>">
            </div>
            <div class="form-group">
                <input class="form-control" type="password" name="password" placeholder="密码">
