--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -9,7 +9,7 @@
                                <li><a class="size-changer small">Small</a></li>
                                <li><a class="size-changer large active">Large</a></li>
                            </ul>
-                           <ul class="nav navbar-nav navbar-right">
+                           <ul class="nav navbar-nav navbar-right" style="top:25px;">
                                <li><a href="#">Link</a></li>
                                <li><a href="#">Link</a></li>
                                <li>
