--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -4,31 +4,19 @@
                <div class="row">
                    <div class="col-lg-12">
                        <div class="collapse navbar-collapse">
-                           <ul class="nav navbar-nav navbar-left bootstrap-admin-theme-change-size">
-                               <li class="text">Change size:</li>
-                               <li><a class="size-changer small">Small</a></li>
-                               <li><a class="size-changer large active">Large</a></li>
-                           </ul>
-                           <ul class="nav navbar-nav navbar-right" style="top:25px;">
-                               <li><a href="#">Link</a></li>
-                               <li><a href="#">Link</a></li>
+                           <ul class="nav navbar-nav navbar-right">
                                <li>
-                                   <a href="#">Reminders <i class="glyphicon glyphicon-bell"></i></a>
+                                   <a href="#">提醒 <i class="glyphicon glyphicon-bell"></i></a>
                                </li>
                                <li>
-                                   <a href="#">Settings <i class="glyphicon glyphicon-cog"></i></a>
-                               </li>
-                               <li>
-                                   <a href="#">Go to frontend <i class="glyphicon glyphicon-share-alt"></i></a>
+                                   <a href="#">设置 <i class="glyphicon glyphicon-cog"></i></a>
                                </li>
                                <li class="dropdown">
-                                   <a href="#" role="button" class="dropdown-toggle" data-hover="dropdown"> <i class="glyphicon glyphicon-user"></i> Username <i class="caret"></i></a>
+                                   <a href="#" role="button" class="dropdown-toggle" data-hover="dropdown"> <i class="glyphicon glyphicon-user"></i> <%= username %> <i class="caret"></i></a>
                                    <ul class="dropdown-menu">
-                                       <li><a href="#">Action</a></li>
-                                       <li><a href="#">Another action</a></li>
-                                       <li><a href="#">Something else here</a></li>
+                                       <li><a href="#">修改密码</a></li>
                                        <li role="presentation" class="divider"></li>
-                                       <li><a href="index.html">Logout</a></li>
+                                       <li><a href="/logout">注销</a></li>
                                    </ul>
                                </li>
                            </ul>
@@ -39,7 +27,7 @@
        </nav>
 
        <!-- main / large navbar -->
-       <nav class="navbar navbar-default navbar-fixed-top bootstrap-admin-navbar bootstrap-admin-navbar-under-small" role="navigation">
+       <nav class="navbar navbar-default navbar-fixed-top bootstrap-admin-navbar bootstrap-admin-navbar-under-small" role="navigation" style="top:25px;">
            <div class="container">
                <div class="row">
                    <div class="col-lg-12">
@@ -50,25 +38,10 @@
                                <span class="icon-bar"></span>
                                <span class="icon-bar"></span>
                            </button>
-                           <a class="navbar-brand" href="about.html">Admin Panel</a>
+                           <a class="navbar-brand" href="/">Admin Panel</a>
                        </div>
                        <div class="collapse navbar-collapse main-navbar-collapse">
                            <ul class="nav navbar-nav">
-                               <li class="active"><a href="#">Link</a></li>
-                               <li><a href="#">Link</a></li>
-                               <li class="dropdown">
-                                   <a href="#" class="dropdown-toggle" data-hover="dropdown">Dropdown <b class="caret"></b></a>
-                                   <ul class="dropdown-menu">
-                                       <li role="presentation" class="dropdown-header">Dropdown header</li>
-                                       <li><a href="#">Action</a></li>
-                                       <li><a href="#">Another action</a></li>
-                                       <li><a href="#">Something else here</a></li>
-                                       <li role="presentation" class="divider"></li>
-                                       <li role="presentation" class="dropdown-header">Dropdown header</li>
-                                       <li><a href="#">Separated link</a></li>
-                                       <li><a href="#">One more separated link</a></li>
-                                   </ul>
-                               </li>
                            </ul>
                        </div><!-- /.navbar-collapse -->
                    </div>
@@ -80,78 +53,27 @@
              <!-- left, vertical navbar -->
              <div class="col-md-2 bootstrap-admin-col-left">
                  <ul class="nav navbar-collapse collapse bootstrap-admin-navbar-side">
-                     <li>
-                         <a href="about.html"><i class="glyphicon glyphicon-chevron-right"></i> About</a>
-                     </li>
                      <li class="active">
-                         <a href="dashboard.html"><i class="glyphicon glyphicon-chevron-right"></i> Dashboard</a>
+                         <a href="dashboard.html"><i class="glyphicon glyphicon-chevron-right"></i> 仪表板</a>
                      </li>
-                     <li class="disabled">
-                         <a href="#"><i class="glyphicon glyphicon-chevron-right"></i> Calendar</a><!-- calendar.html -->
-                     </li>
-                     <li class="disabled">
-                         <a href="#"><i class="glyphicon glyphicon-chevron-right"></i> Statistics (Charts)</a><!-- stats.html -->
-                     </li>
-                     <li>
-                         <a href="forms.html"><i class="glyphicon glyphicon-chevron-right"></i> Forms</a>
-                     </li>
-                     <li>
-                         <a href="tables.html"><i class="glyphicon glyphicon-chevron-right"></i> Tables</a>
-                     </li>
-                     <li>
-                         <a href="buttons-and-icons.html"><i class="glyphicon glyphicon-chevron-right"></i> Buttons &amp; Icons</a>
-                     </li>
-                     <li>
-                         <a href="wysiwyg-editors.html"><i class="glyphicon glyphicon-chevron-right"></i> WYSIWYG Editors</a>
-                     </li>
-                     <li>
-                         <a href="ui-and-interface.html"><i class="glyphicon glyphicon-chevron-right"></i> UI &amp; Interface</a>
-                     </li>
-                     <li>
-                         <a href="error-pages.html"><i class="glyphicon glyphicon-chevron-right"></i> Error pages</a>
-                     </li>
-                     <li>
-                         <a href="forms.html"><i class="glyphicon glyphicon-chevron-down"></i> Submenu</a>
-                         <ul class="nav navbar-collapse bootstrap-admin-navbar-side">
-                             <li><a href="about.html"><i class="glyphicon glyphicon-chevron-right"></i> Submenu 1</a></li>
-                             <li><a href="about.html"><i class="glyphicon glyphicon-chevron-right"></i> Submenu 2</a></li>
-                             <li><a href="about.html"><i class="glyphicon glyphicon-chevron-right"></i> Submenu 3</a></li>
-                         </ul>
-                     </li>
-                     <li>
-                         <a href="#"><span class="badge pull-right">731</span> Orders</a>
-                     </li>
-                     <li>
-                         <a href="#"><span class="badge pull-right">812</span> Invoices</a>
-                     </li>
-                     <li>
-                         <a href="#"><span class="badge pull-right">27</span> Clients</a>
-                     </li>
-                     <li>
-                         <a href="#"><span class="badge pull-right">1,234</span> Users</a>
-                     </li>
-                     <li>
-                         <a href="#"><span class="badge pull-right">2,221</span> Messages</a>
-                     </li>
-                     <li>
-                         <a href="#"><span class="badge pull-right">11</span> Reports</a>
-                     </li>
-                     <li>
-                         <a href="#"><span class="badge pull-right">83</span> Errors</a>
-                     </li>
-                     <li>
-                         <a href="#"><span class="badge pull-right">4,231</span> Logs</a>
-                     </li>
+                     <% navs.forEach(function(nav){ %>
+                       <li>
+                           <a href="<%= nav.address %>"><i class="glyphicon glyphicon-chevron-right"></i> <%= nav.name %></a>
+                           <% if(nav.children.length>>0>0 ){ nav.children.forEach(function(func){%>
+                            <li><a href="<%= func.address %>"><i class="glyphicon glyphicon-chevron-right"></i> <%= nav.name %> 1</a></li>
+                            <%}) }%>
+                       </li>
+                     <%}) %>
                  </ul>
              </div>
 
-             <!-- content -->
+             <!-- content
              <div class="col-md-10">
                <a href="/user" >用户</a>
                <a href="/role" >角色</a>
                <a href="/func" >功能</a>
                <a href="/navigation" >导航</a>
-               <a href="/logout" >注销</a>
+               <a href="/logout" >注销</a>-->
              </div>
            </div>
        </div>
