--- a/views/navigation/index.ejs
+++ b/views/navigation/index.ejs
@@ -1,53 +1,81 @@
-<table>
-  <tr>
-    <th>
-      导航名称
-    </th>
-    <th>
-      描述
-    </th>
-    <th>
-      图标
-    </th>
-    <th>
-      TAG
-    </th>
-    <th>
-      排序
-    </th>
-    <th>
 
-    </th>
-    <th>
-
-    </th>
-  </tr>
-  <% navs.forEach(function(nav){ %>
-    <tr>
-      <td>
-        <%= nav.name %>
-      </td>
-      <td>
-        <%= nav.desc %>
-      </td>
-      <td>
-        <%= nav.icon %>
-      </td>
-      <td>
-        <%= nav.tag %>
-      </td>
-      <td>
-        <%= nav.sort %>
-      </td>
-      <td>
-        <a href="/navigation/edit/<%=nav.id%>" >修改</a>
-      </td>
-      <td>
-        <a href="/navigation/delete/<%=nav.id%>" onclick="if(!confirm('删除后不可恢复,确定删除纪录吗?'))return false;">删除</a>
-      </td>
-    </tr>
-  <% }) %>
-</table>
-<br>
-<a href="/navigation/new">创建导航</a>
-<a href="/">首页</a>
+<div class="row">
+  <div class="col-xs-12 col-md-12">
+    <div class="widget">
+      <div class="widget-header ">
+        <span class="widget-caption">导航列表</span>
+        <div class="widget-buttons">
+          <a href="#" data-toggle="maximize">
+            <i class="fa fa-expand"></i>
+          </a>
+          <a href="#" data-toggle="collapse">
+            <i class="fa fa-minus"></i>
+          </a>
+          <a href="#" data-toggle="dispose">
+            <i class="fa fa-times"></i>
+          </a>
+        </div>
+      </div>
+      <div class="widget-body">
+        <div class="table-toolbar">
+          <a  href="Navigation/new" class="btn btn-default">创建导航</a>
+        </div>
+        <div role="grid" id="editabledatatable_wrapper" class="dataTables_wrapper form-inline no-footer">
+          <table class="table table-striped table-hover table-bordered dataTable no-footer" id="editabledatatable" aria-describedby="editabledatatable_info">
+            <thead>
+            <tr role="row">
+              <th class="sorting_disabled" rowspan="1" colspan="1" style="min-width: 70px;">排序</th>
+              <th rowspan="1" colspan="1" style="min-width: 80px;" aria-sort="ascending">名称</th>
+              <th rowspan="1" colspan="1" style="min-width: 80px;">描述</th>
+              <th rowspan="1" colspan="1" style="min-width: 98px;">图标</th>
+              <th rowspan="1" colspan="1" style="min-width: 80px;">Tag</th>
+              <th rowspan="1" colspan="1" aria-label="" style="min-width: 70px;"></th>
+            </tr>
+            </thead>
+            <tbody>
+            <% navlist.forEach(function(nav){ %>
+            <tr>
+              <td>
+              <%= nav.sort %>
+              </td>
+              <td>
+              <%= nav.name %>
+              </td>
+              <td>
+              <%= nav.desc %>
+              </td>
+              <td>
+              <%= nav.icon %>
+              </td>
+              <td>
+              <%= nav.tag %>
+              </td>
+              <td>
+              <a class="btn btn-info btn-xs edit" href="/navigation/edit/<%=nav.id%>" >修改</a>
+              <a class="btn btn-danger btn-xs delete" href="" onclick="funDel('<%=nav.id%>');">删除</a>
+              </td>
+            </tr>
+            <% }) %>
+            </tbody>
+          </table>
+          <div class="row DTTTFooter">
+            <div class="col-sm-6">
+              <div class="dataTables_info" id="editabledatatable_info" role="alert" aria-live="polite" aria-relevant="all">Showing 1 to 5 of 6 entries
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="dataTables_paginate paging_bootstrap" id="editabledatatable_paginate">
+                <ul class="pagination">
+                  <li class="prev disabled"><a href="#">Prev</a></li>
+                  <li class="active"><a href="#">1</a></li>
+                  <li><a href="#">2</a></li>
+                  <li class="next"><a href="#">Next</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
