--- a/views/user/new.ejs
+++ b/views/user/new.ejs
@@ -1,4 +1,4 @@
-<form action="/user/create" method="post">
+<form action="/user/new" method="post">
 
 <input  name="user" type="text" value="<%= user.Name %>" />
 <br>
@@ -9,4 +9,4 @@
 <input type="hidden" name="_csrf" value="<%= _csrf %>" />
 </form>
 <br>
-<a href="/user/create">取消</a>
+<a href="/user">取消</a>
