--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -1,4 +1,4 @@
-<form action="/user/update" method="post">
+<form action="/user/edit" method="post">
 <input name="id" type="hidden" value="<%= user.Name %>"/>
 <input name="user" type="text" readonly="readonly" value="<%= user.Name %>"/>
 <br>
