--- a/views/session/index.ejs
+++ b/views/session/index.ejs
@@ -23,7 +23,7 @@
         <link id="skin-link" href="" rel="stylesheet" type="text/css" />
 
         <!--Skin Script: Place this script in head to load scripts for skins and rtl support-->
-        
+
 
   </head>
 
@@ -44,7 +44,7 @@
             <div class="loginbox-title">登 录</div>
 
             <div class="loginbox-textbox">
-		                <input type="text" name="username" class="form-control" placeholder="用户名" />
+		                <input type="text" name="account" class="form-control" placeholder="用户名" />
             </div>
             <div class="loginbox-textbox">
                 <input type="password" name="password" class="form-control" placeholder="密码" />
@@ -83,7 +83,7 @@
 		    -->
 
 		    <!--TEMPLATES-->
-    		
+
     		<!--TEMPLATES END-->
 
 		    <!--Basic Scripts-->
