--- a/views/module/index.ejs
+++ b/views/module/index.ejs
@@ -3,7 +3,7 @@
   <div class="col-xs-12 col-md-12">
     <div class="widget">
       <div class="widget-header ">
-        <span class="widget-caption">导航列表</span>
+        <span class="widget-caption">功能列表</span>
         <div class="widget-buttons">
           <a href="#" data-toggle="maximize">
             <i class="fa fa-expand"></i>
@@ -18,7 +18,7 @@
       </div>
       <div class="widget-body">
         <div class="table-toolbar">
-          <a  href="Navigation/new" class="btn btn-default">创建导航</a>
+          <a  href="Navigation/new" class="btn btn-default">创建功能</a>
         </div>
         <div role="grid" id="editabledatatable_wrapper" class="dataTables_wrapper form-inline no-footer">
           <table class="table table-striped table-hover table-bordered dataTable no-footer" id="editabledatatable" aria-describedby="editabledatatable_info">
@@ -51,8 +51,8 @@
               <%= nav.tag %>
               </td>
               <td>
-              <a class="btn btn-info btn-xs edit" href="/navigation/edit/<%=nav.id%>" >修改</a>
-              <a class="btn btn-danger btn-xs delete" href="" onclick="funDel('<%=nav.id%>');">删除</a>
+              <a class="btn btn-info btn-xs edit" <% if(nav.tag==='SYS_MANAGE'){%> disabled='disabled' <%} %> href="/navigation/edit/<%=nav.id%>" >修改</a>
+              <a class="btn btn-danger btn-xs delete" <% if(nav.tag==='SYS_MANAGE'){%> disabled='disabled' <%} %> href="" onclick="funDel('<%=nav.id%>');">删除</a>
               </td>
             </tr>
             <% }) %>
