修改数据库 orm 修改角色、模块逻辑

--- a/views/module/_form.ejs
+++ b/views/module/_form.ejs
@@ -241,7 +241,7 @@
             <input name="sort" type="text" class="form-control" id="sort" value="0" value="<%= nav.sort %>">
           </div>
           <button type="submit" class="btn btn-blue">提交</button>
-          <a href="/navigation" class="btn">返回</a>
+          <a href="/Module" class="btn">返回</a>
         </div>
       </div>
     </div>
