--- a/views/role/_form.ejs
+++ b/views/role/_form.ejs
@@ -9,15 +9,41 @@
         <div>
           <div class="form-group">
             <label for="account">角色名</label>
-            <input name="Name" type="text" class="form-control" id="Name" placeholder="请输入角色名" value="<%= role.Name||'' %>">
+              <input name="Name" type="text" class="form-control" id="Name" placeholder="请输入角色名" value="<%= role.Name||'' %>">
           </div>
           <div class="form-group">
             <label for="Desc">说明</label>
             <input name="Desc"  type="text" class="form-control" placeholder="请输入描述信息" value="<%= role.Desc||'' %>">
           </div>
           <div class="form-group">
-            <label for="Funcs">权限</label>
-            <input name="Funcs"  type="text" class="form-control"  placeholder="" value="<%= role.Funcs||'' %>">
+            <label for="icon">权限</label>
+            <div class="input-group">
+              <div class="input-group-btn">
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
+                  aria-haspopup="true" aria-expanded="false">权限
+                  <span class="caret"></span>
+                </button>
+                <div class="dropdown-menu well select-glyphicons" >
+                  <ul class="select-glyphicons-list">
+                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-asterisk" /></a></li>
+                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-plus" /></a></li>
+                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-euro" /></a></li>
+                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-minus" /></a></li>
+                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-cloud" /></a></li>
+                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-envelope" /></a></li>
+                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-pencil" /></a></li>
+                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-glass" /></a></li>
+                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-music" /></a></li>
+                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-search" /></a></li>
+                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-heart" /></a></li>
+                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-star" /></a></li>
+                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-star-empty" /></a></li>
+
+                  </ul>
+                </div>
+              </div><!-- /btn-group -->
+                <input name="Func" type="text"  class="form-control hidden" >
+            </div><!-- /input-group -->
           </div>
           <button type="submit" class="btn btn-blue">提交</button>
           <a href="/role" class="btn btn-default">返回</a>
