--- a/views/user/_form.ejs
+++ b/views/user/_form.ejs
@@ -36,6 +36,36 @@
             <label for="depart">部门</label>
             <input name="depart" type="text" class="form-control" id="depart" placeholder="请输入部门" value="<%= user.depart||{}.name||'' %>">
           </div>
+          <div class="form-group">
+            <label for="icon">角色</label>
+            <div class="input-group">
+              <div class="input-group-btn">
+                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
+                  aria-haspopup="true" aria-expanded="false">角色
+                  <span class="caret"></span>
+                </button>
+                <div class="dropdown-menu well select-glyphicons" >
+                  <ul class="select-glyphicons-list">
+                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-asterisk" /></a></li>
+                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-plus" /></a></li>
+                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-euro" /></a></li>
+                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-minus" /></a></li>
+                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-cloud" /></a></li>
+                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-envelope" /></a></li>
+                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-pencil" /></a></li>
+                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-glass" /></a></li>
+                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-music" /></a></li>
+                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-search" /></a></li>
+                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-heart" /></a></li>
+                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-star" /></a></li>
+                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-star-empty" /></a></li>
+
+                  </ul>
+                </div>
+              </div><!-- /btn-group -->
+                <input name="Func" type="text"  class="form-control hidden" >
+            </div><!-- /input-group -->
+          </div>
           <button type="submit" class="btn btn-blue">提交</button>
           <a href="/user" class="btn">返回</a>
         </div>
