--- a/views/module/edit.ejs
+++ b/views/module/edit.ejs
@@ -1,4 +1,4 @@
-<form action="/navigation/edit" method="post">
+<form action="/module/edit" method="post">
   <input type="hidden" name="id" value="<%=  nav.id %>">
   <% include _form.ejs %>
 
