--- a/views/module/index.ejs
+++ b/views/module/index.ejs
@@ -24,11 +24,10 @@
           <table class="table table-striped table-hover table-bordered dataTable no-footer" id="editabledatatable" aria-describedby="editabledatatable_info">
             <thead>
             <tr role="row">
-              <th rowspan="1" colspan="1" style="min-width: 70px;">ID</th>
+              <th rowspan="1" colspan="1" style="min-width: 30px;">ID</th>
               <th rowspan="1" colspan="1" style="min-width: 80px;">名称</th>
               <th rowspan="1" colspan="1" style="min-width: 80px;">导航</th>
               <th rowspan="1" colspan="1" style="min-width: 80px;">描述</th>
-              <th rowspan="1" colspan="1" style="min-width: 98px;">图标</th>
               <th rowspan="1" colspan="1" style="min-width: 80px;">Tag</th>
               <th class="sorting_disabled" rowspan="1" colspan="1" style="min-width: 70px;">排序</th>
               <th rowspan="1" colspan="1" aria-label="" style="min-width: 70px;"></th>
@@ -41,16 +40,13 @@
               <%= nav.id %>
               </td>
               <td>
-                <%= nav.name %>
+                <%= nav.name %>  <span class="shiny icon-only glyphicon glyphicon-<%= nav.icon||'' %>" />
               </td>
               <td>
                 <%= nav.showInNav===true?'是':'否' %>
               </td>
               <td>
               <%= nav.desc||'' %>
-              </td>
-              <td>
-              <%= nav.icon||'' %>
               </td>
               <td>
               <%= nav.tag||'' %>
