--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -55,6 +55,9 @@
     <script src="/js/skins.min.js"></script>
 
 
+    <script src="/js/select2/select2.js" charset="utf-8"></script>
+
+
     <!--Page Related styles-->
     <link href="/styles/dataTables.bootstrap.css" rel="stylesheet" />
   </head>
@@ -524,6 +527,7 @@
     <script src="/js/datatable/jquery.dataTables.min.js"></script>
     <script src="/js/datatable/dataTables.tableTools.min.js"></script>
     <script src="/js/datatable/dataTables.bootstrap.min.js"></script>
+
     <!--<script src="/js/datatable/datatables-init.js"></script>-->
     <script>
         // InitiateSimpleDataTable.init();
