--- a/views/user/_form.ejs
+++ b/views/user/_form.ejs
@@ -37,34 +37,15 @@
             <input name="depart" type="text" class="form-control" id="depart" placeholder="请输入部门" value="<%= user.depart||{}.name||'' %>">
           </div>
           <div class="form-group">
-            <label for="icon">角色</label>
-            <div class="input-group">
-              <div class="input-group-btn">
-                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
-                  aria-haspopup="true" aria-expanded="false">角色
-                  <span class="caret"></span>
-                </button>
-                <div class="dropdown-menu well select-glyphicons" >
-                  <ul class="select-glyphicons-list">
-                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-asterisk" /></a></li>
-                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-plus" /></a></li>
-                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-euro" /></a></li>
-                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-minus" /></a></li>
-                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-cloud" /></a></li>
-                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-envelope" /></a></li>
-                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-pencil" /></a></li>
-                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-glass" /></a></li>
-                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-music" /></a></li>
-                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-search" /></a></li>
-                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-heart" /></a></li>
-                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-star" /></a></li>
-                  <li><a href="#"><span class="shiny icon-only glyphicon glyphicon-star-empty" /></a></li>
-
-                  </ul>
-                </div>
-              </div><!-- /btn-group -->
-                <input name="Func" type="text"  class="form-control hidden" >
-            </div><!-- /input-group -->
+            <label for="actor">角色</label>
+            <div class="input-group" style="width:100%;">
+              <select id="selRoles" name="role" style="width:100%;" >
+                  <option value="0" />无
+                  <% roles.forEach(function(r){%>
+                    <option value="<%=r.id%>" /><%=r.Name%>
+                    <%}) %>
+              </select>
+            </div>
           </div>
           <button type="submit" class="btn btn-blue">提交</button>
           <a href="/user" class="btn">返回</a>
@@ -74,16 +55,23 @@
   </div>
 </div>
 <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" style="display: none;">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
 
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                    <h4 class="modal-title" id="myLargeModalLabel">Large modal</h4>
-                </div>
-                <div class="modal-body">
-                    ...
-                </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal-dialog -->
-    </div>
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 class="modal-title" id="myLargeModalLabel">Large modal</h4>
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div>
+<script type="text/javascript">
+    $("#selRoles").select2({
+            placeholder: "选择角色",
+            allowClear: true
+        });
+    $("#selRoles").val("<%= user.role %>").trigger("change");
+</script>
